--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,14 @@
         "guzzlehttp/promises": "^1.0|^2.0",
         "illuminate/support": "^8.0|^9.0|^10.0|^11.0",
         "open-telemetry/opentelemetry": "^1.0",
+        "open-telemetry/api": "1.0.3",
+        "open-telemetry/context": "1.0.2",
+        "open-telemetry/exporter-otlp": "1.0.4",
+        "open-telemetry/exporter-zipkin": "1.0.0",
+        "open-telemetry/sdk": "1.0.8",
+        "open-telemetry/sem-conv": "1.24.0",
+        "symfony/http-client": "^5|^6",
+        "nyholm/psr7": "^1.5",
         "php-http/httplug": "^2.0",
         "php-http/message-factory": "^1.0"
     },
@@ -40,7 +48,6 @@
     "scripts": {
         "test": "vendor/bin/phpunit",
         "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
-
     },
     "config": {
         "sort-packages": true,
